--- a/style-media.css
+++ b/style-media.css
@@ -67,9 +67,7 @@
   .add-btn {
     width: 120px;
     height: 40px;
-    margin-top: 20px;
-    margin-left: auto;
-    margin-right: 55px;
+    margin: 20px 55px 0 auto;
     padding: 10px;
   }
 }
