--- a/style-media.css
+++ b/style-media.css
@@ -23,6 +23,19 @@
     justify-content: space-between;
   }
 }
+
+@media screen and (max-width: 697px) {
+  .for-inputs {
+    display: flex;
+    flex-direction: column;
+    height: 85px;
+  }
+  
+  .inputEditCost {
+    margin-left: 0px;
+  }
+
+}
   
 @media screen and (max-width: 670px) {
   .cost {
@@ -98,6 +111,12 @@
     margin-right: 45px;  
   }
 }
+
+@media screen and (max-width: 478px) {
+  .calendar {
+    width: 92px;
+  }
+}
   
 @media screen and (max-width: 400px) {
   .add-btn {
@@ -108,6 +127,8 @@
 @media screen and (max-width: 375px) {
   .good-container {
     width: 90%;
+    display: flex;
+    flex-direction: column;
   }
   
   .where-spend {
