--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: rgb(169, 169, 182);
 }
-  
+
 .wrapper {
   max-width: 800px;
   display: flex;
@@ -10,7 +10,7 @@ body {
   align-items: center;
   margin: 0 auto;
 }
-  
+
 .sum {
   max-width: 580px;
   width: 80%;
@@ -18,13 +18,13 @@ body {
   justify-content: end;
   margin: 20px auto 0 auto;
 }
-  
+
 #content-page {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-  
+
 .good-container {
   display: flex;
   align-items: center;
@@ -33,7 +33,7 @@ body {
   width: 100%;
   margin: 0 auto;
 }
-  
+
 .main-field {
   display: flex;
   justify-content: space-between;
@@ -42,47 +42,47 @@ body {
   height: 55px;
   width: 80%;
 }
-  
+
 .where-spend {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
 }
-  
+
 .where-spend input {
-  max-width: 300px;
-  width: 100%;
-  height: 27px;
+    max-width: 300px;
+    width: 100%;
+    height: 27px;
 }
-  
+
 .much-spend {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
 }
-  
+
 .much-spend input {
-  height: 27px;
+    height: 27px;
 }
-  
+
 .add-btn {
-  width: 85px;
-  height: 33px;
-  background-color: green;
-  color: black;
-  border: 1px solid green;
-  border-radius: 3px;
-  cursor: pointer;
-  margin-top: auto;
+    width: 85px;
+    height: 33px;
+    background-color: green;
+    color: black;
+    border: 1px solid green;
+    border-radius: 3px;
+    cursor: pointer;
+    margin-top: auto;
 }
-  
+
 .shop {
   width: 190px;
   word-wrap: break-word;
 }
-  
+
 .rightBlock {
   display: flex;
   justify-content: space-between;
@@ -90,26 +90,95 @@ body {
   max-width: 385px;
   width: 100%;
 }
-  
+
 .date {
   width: 50px;
   margin-left: 58px;
 }
-  
+
 .cost {
-  margin-left: 30px;
+  margin-left: 25px;
   width: 170px;
   word-wrap: break-word;
 }
-  
+
 .editImage {
   width: 15px;
   height: 15px;
   margin-left: auto;
 }
-  
+
 .deleteImage {
   width: 15px;
   height: 15px;
   margin-left: 10px;
+}
+
+.hide {
+  display: none;
+}
+
+.editContainer {
+  max-width: 580px;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.editRightBlock {
+  width: 450px;
+}
+
+.inputEditShop {
+  width: 90px;
+  margin-right: 10px;
+}
+
+.inputEditCost {
+  width: 90px;
+  margin-left: 10px;
+}
+
+.editShop {
+  width: 80px;
+}
+
+.editDate {
+  margin: 0 40px 0 0;
+}
+
+.editCost {
+  width: 90px;
+}
+
+.saveButton {
+  background-color: blue;
+  width: 80px;
+  height: 35px;
+  margin-left: 15px;
+  border: 1px solid blue;
+  color: white;
+  border-radius: 5px;
+}
+
+.saveButton {
+  cursor: pointer;
+}
+
+.cancelButton {
+  background-color: red;
+  width: 80px;
+  height: 35px;
+  margin-right: 15px;
+  border: 1px solid red;
+  color: white;
+  border-radius: 5px;
+}
+
+.cancelButton:hover {
+  cursor: pointer;
+}
+
+.for-inputs {
+  display: flex;
+  justify-content: space-between;
 }
