--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .good-container {
@@ -181,8 +182,15 @@ body {
 .for-inputs {
   display: flex;
   justify-content: space-between;
+  max-width: 580px;
+  width: 100%;
+  margin-top: 20px;
 }
 
 .indent {
   margin-bottom: 20px;
+}
+
+.calendar {
+  width: 132px;
 }
